--- a/style.css
+++ b/style.css
@@ -1,43 +1,41 @@
 body {
     font-family: Arial, sans-serif;
+    margin: 20px;
     line-height: 1.6;
-    margin: 0;
-    padding: 20px;
-    background-color: #f4f4f4;
 }
 
-.letter-container {
-    background-color: #fff;
-    padding: 20px;
+.container {
+    width: 70%;
     margin: 0 auto;
-    width: 60%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h2 {
-    font-size: 1.5em;
+.address {
+    text-align: right;
+    margin-bottom: 30px;
 }
 
 h3 {
-    font-size: 1.2em;
-}
-
-address {
-    font-style: normal;
-    line-height: 1.4;
-    margin-bottom: 20px;
+    margin-top: 30px;
 }
 
 ul, ol {
     margin-left: 20px;
 }
 
-footer {
-    margin-top: 20px;
-    font-style: italic;
-    font-size: 0.9em;
+dl {
+    margin-left: 20px;
+}
+
+dt {
+    font-weight: bold;
+    margin-top: 10px;
 }
 
 a {
-    color: #00f;
+    color: blue;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
