--- a/style.css
+++ b/style.css
@@ -1,41 +1,32 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 20px;
     line-height: 1.6;
+    margin: 40px;
+    background-color: #f4f4f4;
 }
 
 .container {
-    width: 70%;
-    margin: 0 auto;
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-.address {
+.sender-address, .receiver-address {
     text-align: right;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+}
+
+.letter-body {
+    margin-top: 40px;
 }
 
 h3 {
-    margin-top: 30px;
+    margin-top: 20px;
+    margin-bottom: 5px;
 }
 
-ul, ol {
-    margin-left: 20px;
-}
-
-dl {
-    margin-left: 20px;
-}
-
-dt {
-    font-weight: bold;
+h4 {
     margin-top: 10px;
-}
-
-a {
-    color: blue;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
+    margin-bottom: 5px;
 }
