--- a/style.css
+++ b/style.css
@@ -1,42 +1,24 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-    line-height: 1.6;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
-.container {
-    width: 70%;
-    margin: 0 auto;
-    text-align: right;
+.top {
+  text-align: right;
 }
 
-.address {
-    text-align: right;
-    margin-bottom: 30px;
+h2 {
+  font-size: 1.3em;
 }
 
-h3 {
-    margin-top: 30px;
+p,ul,ol,dl,address {
+  font-size: 1.1em;
 }
 
-ul, ol {
-    margin-left: 20px;
+p,li,dd,dt,address {
+  line-height: 1.5;
 }
 
-dl {
-    margin-left: 20px;
-}
-
-dt {
-    font-weight: bold;
-    margin-top: 10px;
-}
-
-a {
-    color: blue;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
+h1 {
+  font-size: 1.5em;
 }
